--- a/app/assets/stylesheets/chamber.css.scss
+++ b/app/assets/stylesheets/chamber.css.scss
@@ -14,33 +14,37 @@
 }
 
 .mainHeader{
-    text-align: center;  
-    // why is display inline not having any effect?
-    display: inline;
+    text-align: center; 
 }
 
+.tableHeader{
+    background: #EDEDF2;
+    height: 50px;
+}
 
 .party{
-    width: 3%;
-    text-align: center;
-    border-radius: 50%;
-    // why isn't nesting working here w/o &????
+    height: 10px;
+    width: 10px;
+    display: inline-block;
+    
     &.dem{
         background: #469BF0;
     }
     &.rep{
         background: #E8411C;
     }
-    
+}
+
+.memberInfo{
+    width: 150px;
+    margin: auto;
 }
 
 .nav-buttons{
-    font-size: 30px;
+    font-size: 25px;
     display: inline;
-    
-    .nav{
-        // margin-left: 100px   
-    }
+    font-weight: bold;
+
 }
 
 table{
@@ -54,11 +58,16 @@ table{
 
 td{
     border-bottom: 0.5px solid #B9CED6;
-    // width: 1.0rem;
     margin-left: 10px;
     height: 100px;
-    &.image{
-        width: 100px;
+}
+
+.image{
+    width: 100px;
+    height: 100px;
+    img{
+        width: 100%;
+        height: 100%;
     }
 }
 
