--- a/app/views/govt_official/show.html.haml
+++ b/app/views/govt_official/show.html.haml
@@ -14,11 +14,15 @@
 %div.memberStats   
     %section.memberStatsIntro
         %ul.horizontalList
-            %li votes with party 
-            %li missed votes
-            %li cosponsored bills
+            %li Votes with Party 
+            %li Missed Votes
+            %li Cosponsored Bills
             
-    %section.memberStatsPlus
+    %section.memberStatsRecent
+        %div.recentHeading
+            Recent Actvity
+        %div.filter
+            Filter
         %ul.horizontalList.plus
             %li Statements
             %li Bills
