--- a/app/views/chambers/senate.html.haml
+++ b/app/views/chambers/senate.html.haml
@@ -9,12 +9,12 @@
     // %img(src="//upload.wikimedia.org/wikipedia/commons/thumb/5/59/Cory_Booker%2C_official_portrait%2C_114th_Congress.jpg/220px-Cory_Booker%2C_official_portrait%2C_114th_Congress.jpg")
 
     %h1 Current Senators 
-    %h4 
+    %h4 Senators from the 115th Congress
 
 %table
     %tr.tableHeader
          
-        %th
+        %th.image
         %th.name Name
         %th.nextElection Next Election 
         %th.votes Votes with Party(%)
@@ -24,16 +24,16 @@
                 
         %tr
         
-        %td
-            %div.image
-                %img(src="#{member.image_string}")
-
-        %td
-            %div.memberInfo
-                %div{class: renderPartyColor(member.party)}
-                =link_to member.firstName + " " + member.lastName, govt_official_path(member.id)
-                %br
-                .description
-                    ="#{member.party} - #{member.state}"
-        %td=member.nextElection
-        %td=member.votesWithParty
+            %td
+                %div.image
+                    %img(src="#{member.image_string}")
+    
+            %td
+                %div.memberInfo
+                    %div{class: renderPartyColor(member.party)}
+                    =link_to member.firstName + " " + member.lastName, govt_official_path(member.id)
+                    %br
+                    .description
+                        ="#{member.party} - #{member.state}"
+            %td=member.nextElection
+            %td=member.votesWithParty
