complete ajax functionality

--- a/app/views/govt_official/_recent_activity.html.haml
+++ b/app/views/govt_official/_recent_activity.html.haml
@@ -5,9 +5,31 @@
     %div.filter
         Filter
     %ul.horizontalList.plus{data: { id: @member.id}}
-        %li#statements Statements
-        %li#bills Bills
-        %li#votes Votes
-        %li#twitter Twitter
+        %li#statements{data: {state: "true"}}
+            Statments
+        %li#bills
+            Bills
+        %li#votes
+            Votes
+        %li#twitter
+            Twitter
+        // %div.recentActivity#statments
+        //     %svg{xmlns:'http://www.w3.org/2000/svg', width: 130, height: 130}
+        //         %circle{cx:"10%", cy:"10%", r: "10%", stroke: "black", fill: "#abb9d1"}
+        //     %label Statements
+        // %div.recentActivity#Bills
+        //     %svg{xmlns:'http://www.w3.org/2000/svg', width: 130, height: 130}
+        //         %circle{cx:"10%", cy:"10%", r: "10%", stroke: "black", fill: "#abb9d1"}
+        //     %label Bills
+        // %div.recentActivity#Votes
+        //     %svg{xmlns:'http://www.w3.org/2000/svg', width: 130, height: 130}
+        //         %circle{cx:"10%", cy:"10%", r: "10%", stroke: "black", fill: "#abb9d1"}
+        //     %label Votes
+        // %div.recentActivity#Twitter
+        //     %svg{xmlns:'http://www.w3.org/2000/svg', width: 130, height: 130}
+        //         %circle{cx:"10%", cy:"10%", r: "10%", stroke: "black", fill: "#abb9d1"}
+        //     %label Twitter   
     
-    %section#activity  
+    %section#activity
+        %ul#activityList
+        
