--- a/app/assets/stylesheets/govt_official.css.scss
+++ b/app/assets/stylesheets/govt_official.css.scss
@@ -2,6 +2,17 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.personalInfo{
+    width: 30%;
+    height: 100%;
+    float: left;
+}
+
+.legislativeInfo{
+    width: 100%;
+    height: 100%;
+}
+
 .header{
     padding-top: 30px;
     h3, h4{
@@ -43,6 +54,9 @@
             background: #d0d3d8;
         }
     }
+    #compareButton{
+        width: 250px;
+    }
 }
 
 .memberStats{
@@ -82,9 +96,54 @@
         li{
             margin-right: 200px;    
         }
+        display: inline-block;
+        margin-left: 230px;
+        // overflow: scroll;
     }
 }
 
-#activity{
-    
+
+#activityList{
+    list-style-type: none;
+    #listChildren{
+        border-bottom: 0.5px solid #B9CED6;
+    }
 }
+
+@mixin recentBtn{
+    background: blue;
+    display: inline;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    border: 1px solid red;
+}
+
+// **Color change here should probably just be handled by javascript...
+
+// svg#statment:hover{
+//     background-color: #3ca88d;
+// }
+// svg#bills:hover{
+//     background-color: #e4e876;
+// }
+// svg#votes:hover{
+//     background-color: #9ce552;
+// }
+// svg#twitter:hover{
+//     background-color: #7fc9e2;    
+// }
+
+// #statements:before{
+//     @include recentBtn;
+//     "#3ca88d"
+// }
+// #bills:before{
+//     @include recentBtn;
+// }
+// #votes:before{
+//     @include recentBtn; 
+// }
+// #twitter:before{
+//     @include recentBtn;
+// }
