--- a/app/views/govt_official/_recent_activity.html.haml
+++ b/app/views/govt_official/_recent_activity.html.haml
@@ -30,6 +30,6 @@
         //         %circle{cx:"10%", cy:"10%", r: "10%", stroke: "black", fill: "#abb9d1"}
         //     %label Twitter   
     
-    %section#activity
-        %ul#activityList
+    %section.activity
+        %ul.activityList
         
