small change to fix alignment

--- a/app/views/govt_official/_recent_activity.html.haml
+++ b/app/views/govt_official/_recent_activity.html.haml
@@ -5,7 +5,7 @@
     %div.filter
         Filter
     %ul.horizontalList.plus{data: { id: @member.id}}
-        %li#statements{data: {state: "true"}}
+        %li#statements
             Statments
         %li#bills
             Bills
