--- a/app/views/govt_official/_recent_activity.html.haml
+++ b/app/views/govt_official/_recent_activity.html.haml
@@ -6,13 +6,13 @@
         Filter
     %ul.horizontalList.plus{data: { id: @member.id}}
         %li#statements
-            Statments
+            %i.fa.fa-quote-right Statments
         %li#bills
-            Bills
+            %i.fa.fa-file-text Bills
         %li#votes
-            Votes
+            %i.fa.fa-check-circle Votes
         %li#twitter
-            Twitter
+            %i.fa.fa-twitter Twitter
         // %div.recentActivity#statments
         //     %svg{xmlns:'http://www.w3.org/2000/svg', width: 130, height: 130}
         //         %circle{cx:"10%", cy:"10%", r: "10%", stroke: "black", fill: "#abb9d1"}
