--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,9 +12,13 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
+
+ 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome";
 
 
 // body{
