added bills index

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,5 +7,6 @@
   = csrf_meta_tags 
 
 %body
-  // so all the forms from all the objects will be displayed through here i guess
+=render 'layouts/navbar'
+
 = yield 
