--- a/app/views/bills/index.html.haml
+++ b/app/views/bills/index.html.haml
@@ -12,5 +12,5 @@
         
             %td=bill.latest_major_action_date
             %td=bill.title
-            %td=bill.sponsor_id
+            %td=renderName(bill)
             %td=bill.latest_major_action
