added actions to bill and cleaned up getRecentBill

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,18 @@
 @import "font-awesome";
 
 
-// body{
-//     background: #E2EDE9;
-// }
+.party{
+    height: 10px;
+    width: 10px;
+    display: inline-block;
+    
+    &.dem{
+        background: #469BF0;
+    }
+    &.rep{
+        background: #E8411C;
+    }
+    &.ind{
+        background: #FAD76F;
+    }
+}
