--- a/app/views/bills/index.html.haml
+++ b/app/views/bills/index.html.haml
@@ -10,7 +10,12 @@
                 
         %tr
         
-            %td=bill.latest_major_action_date
-            %td=bill.title
-            %td=renderName(bill)
-            %td=bill.latest_major_action
+            %td.date=bill.latest_major_action_date
+            %td.title=link_to bill.title, bill_path(bill.bill_id)
+            %td.sponsor
+                -if bill.govt_official != nil
+                    %div{class: renderPartyColor(bill.govt_official.party)}
+                    =bill.govt_official.firstName + " " + bill.govt_official.lastName
+                -else
+                    Not Available
+            %td.status=bill.latest_major_action
